[gd_scene load_steps=25 format=3 uid="uid://bdv5h6fjav3v6"]

[ext_resource type="Script" path="res://Scripts/Enemies/System/Common.gd" id="1_ogllj"]
[ext_resource type="Resource" uid="uid://c056hcdn8t6gl" path="res://Resources/Enemy_stats/ground.tres" id="2_bsdod"]
[ext_resource type="Script" path="res://Scripts/Enemies/System/Damage_handler.gd" id="3_uhn0o"]
[ext_resource type="PackedScene" uid="uid://caav3i30vocuh" path="res://Scenes/Enemies/Health_bar.tscn" id="4_ta7nw"]
[ext_resource type="Script" path="res://Scripts/Enemies/smasher.gd" id="5_6u34s"]
[ext_resource type="Shader" path="res://Shaders/Flash.gdshader" id="6_n8agy"]
[ext_resource type="SpriteFrames" uid="uid://es4a2ptcddil" path="res://Sprites/Enemies/Smasher/boss_treatoni.tres" id="7_gj37h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c4qnd"]
shader = ExtResource("6_n8agy")
shader_parameter/Smooth = true
shader_parameter/EnableOutline = false
shader_parameter/width = 8.0
shader_parameter/outline_color = Vector4(1, 0, 0, 0.05)
shader_parameter/selection_color = Vector4(1, 1, 1, 1)
shader_parameter/color_intensity = 0.0
shader_parameter/pixel_size = 1

[sub_resource type="Animation" id="Animation_f2auy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"breathing"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack/Area/Collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fmrva"]
resource_name = "attack"
length = 2.13334
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333, 1, 1.06667, 1.13333, 1.2, 1.26667, 1.33333, 1.4, 1.46667, 1.53333, 1.6, 1.66667, 1.73333, 1.8, 1.86667, 1.93333, 2, 2.06667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack/Area/Collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8, 0.866667, 1.06667, 1.13333, 1.53333, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Unique")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8, 1.06667, 1.53333),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"Get_ground_particles"
}, {
"args": [],
"method": &"Get_ground_particles"
}, {
"args": [],
"method": &"Get_ground_particles"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8, 1.06667, 1.53333),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"shake_ground"
}, {
"args": [],
"method": &"shake_ground"
}, {
"args": [],
"method": &"shake_ground"
}]
}

[sub_resource type="Animation" id="Animation_f3myt"]
resource_name = "breathing"
length = 0.93334
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"breathing"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_6fvjx"]
resource_name = "death"
length = 1.26667
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333, 1, 1.06667, 1.13333, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Spawn_coins"
}]
}

[sub_resource type="Animation" id="Animation_sjjjs"]
resource_name = "hit"
length = 0.200007
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hit"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack/Area/Collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_74yob"]
resource_name = "idle"
length = 0.93334
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_ujtea"]
resource_name = "run"
length = 0.53334
loop_mode = 1
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8eb0m"]
_data = {
"RESET": SubResource("Animation_f2auy"),
"attack": SubResource("Animation_fmrva"),
"breathing": SubResource("Animation_f3myt"),
"death": SubResource("Animation_6fvjx"),
"hit": SubResource("Animation_sjjjs"),
"idle": SubResource("Animation_74yob"),
"run": SubResource("Animation_ujtea")
}

[sub_resource type="Animation" id="Animation_tacc7"]
resource_name = "Hit_effect"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/EnableOutline")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:material:shader_parameter/color_intensity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.5, 0.5, 0.0]
}

[sub_resource type="Animation" id="Animation_7sgm3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:material:shader_parameter/color_intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:material:shader_parameter/EnableOutline")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u07lw"]
_data = {
"Hit_effect": SubResource("Animation_tacc7"),
"RESET": SubResource("Animation_7sgm3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2r4kg"]
size = Vector2(28, 41.75)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8d6cu"]
radius = 29.0
height = 60.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k0iaw"]
radius = 24.0
height = 324.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30t42"]
size = Vector2(46.25, 42.125)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1ugl2"]
radius = 24.0
height = 48.0

[node name="Smasher" type="Node2D"]

[node name="Enemy" type="CharacterBody2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ogllj")
stats = ExtResource("2_bsdod")

[node name="HP" type="Node2D" parent="Enemy"]
position = Vector2(0, -9)
script = ExtResource("3_uhn0o")

[node name="Health" parent="Enemy/HP" instance=ExtResource("4_ta7nw")]

[node name="Unique" type="Node" parent="Enemy"]
script = ExtResource("5_6u34s")

[node name="Timers" type="Node" parent="Enemy"]

[node name="Turn_around" type="Timer" parent="Enemy/Timers"]

[node name="Cooldown" type="Timer" parent="Enemy/Timers"]

[node name="Sprite" type="AnimatedSprite2D" parent="Enemy"]
material = SubResource("ShaderMaterial_c4qnd")
sprite_frames = ExtResource("7_gj37h")
animation = &"breathing"

[node name="Animation" type="AnimationPlayer" parent="Enemy"]
libraries = {
"": SubResource("AnimationLibrary_8eb0m")
}

[node name="Filter" type="AnimationPlayer" parent="Enemy"]
libraries = {
"": SubResource("AnimationLibrary_u07lw")
}

[node name="Collider" type="CollisionShape2D" parent="Enemy"]
visible = false
position = Vector2(0, 20.875)
shape = SubResource("RectangleShape2D_2r4kg")
debug_color = Color(2.45467e-06, 0.634294, 0.4307, 0.42)

[node name="Attack" type="Node2D" parent="Enemy"]
visible = false

[node name="Area" type="Area2D" parent="Enemy/Attack"]
collision_layer = 16
metadata/bleeding_damage = 20

[node name="Collider" type="CollisionShape2D" parent="Enemy/Attack/Area"]
position = Vector2(29, 23)
shape = SubResource("CapsuleShape2D_8d6cu")
disabled = true
debug_color = Color(0.827451, 0, 0.341176, 0)

[node name="Movement" type="Node2D" parent="Enemy"]
visible = false

[node name="Ground" type="RayCast2D" parent="Enemy/Movement"]
position = Vector2(30, 5)
collision_mask = 2

[node name="Wall" type="RayCast2D" parent="Enemy/Movement"]
position = Vector2(30, 5)
rotation = -1.5708
target_position = Vector2(-4.33922e-05, 12)
collision_mask = 2

[node name="Vision" type="Area2D" parent="Enemy"]
visible = false
collision_layer = 4

[node name="Collider" type="CollisionShape2D" parent="Enemy/Vision"]
position = Vector2(0, 21)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_k0iaw")
debug_color = Color(0.396078, 0.470588, 1, 0.054902)

[node name="Detection" type="Area2D" parent="Enemy"]
visible = false
collision_layer = 4

[node name="Collider" type="CollisionShape2D" parent="Enemy/Detection"]
position = Vector2(25, 20.875)
shape = SubResource("RectangleShape2D_30t42")
debug_color = Color(0.917647, 0.243137, 0.403922, 0.117647)

[node name="Hitbox" type="Area2D" parent="Enemy"]
visible = false
collision_layer = 4
collision_mask = 8

[node name="Collider" type="CollisionShape2D" parent="Enemy/Hitbox"]
position = Vector2(0, 21)
shape = SubResource("CapsuleShape2D_1ugl2")
debug_color = Color(0, 0.6, 0.701961, 0.380392)

[connection signal="timeout" from="Enemy/Timers/Turn_around" to="Enemy/Unique" method="_on_turn_around_timeout"]
[connection signal="timeout" from="Enemy/Timers/Cooldown" to="Enemy/Unique" method="_on_cooldown_timeout"]
[connection signal="body_entered" from="Enemy/Vision" to="Enemy" method="_on_vision_det_body_entered"]
[connection signal="body_exited" from="Enemy/Vision" to="Enemy" method="_on_vision_det_body_exited"]
[connection signal="body_entered" from="Enemy/Detection" to="Enemy" method="_on_attacker_det_body_entered"]
[connection signal="body_exited" from="Enemy/Detection" to="Enemy" method="_on_attacker_det_body_exited"]
[connection signal="area_entered" from="Enemy/Hitbox" to="Enemy" method="_on_hitbox_area_entered"]
